Fixed sidebar bugs and visibility issues

--- a/management/static/management/styles.css
+++ b/management/static/management/styles.css
@@ -32,8 +32,7 @@ body, html {
 
 .sidebar a {
     padding: 6px, 8px, 6px, 16px;
-    text-decoration: none;
-    font-size: 12px;
+    text-decoration: none;    
     color: #818181;
     display: block;
     border: none;
@@ -42,6 +41,10 @@ body, html {
     text-align: left;
     cursor: pointer;
     outline: none;
+}
+
+.topic{
+    font-size: 14px;
 }
 
 /* Gold color for hover, focus, and active links */
@@ -81,9 +84,9 @@ body, html {
 
 .icon-with-badge {
     position: relative;
-    display: inline-block;
-    margin-left: 20px;  
     
+    margin-right: 15px;  
+    float: right;
 }
 
 .icon-with-badge .fas {
@@ -98,7 +101,7 @@ body, html {
     color: white;
     border-radius: 50%;
     padding: 2px 5px;
-    font-size: 10px; /* Adjust font size as needed */
+    font-size: 10px; 
 }
 
 #management-container{
